@@ -902,6 +902,8 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>lines(</code>" <em>integer</em> "<code>,</code>" <em>integer</em> "<code>)</code>" |</dd>
 			<dd>"<code>events</code>" |</dd>
 			<dd>"<code>public(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>protected(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>private(</code>" predicate_indicator_list "<code>)</code>" |</dd>
 			<dd>"<code>parameter_names(</code>" <em>list of atoms</em> "<code>)</code>"</dd>
 	</dl>
 	<dl id="grammar_object_property">
@@ -918,6 +920,8 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>events</code>" |</dd>
 			<dd>"<code>complements</code>" |</dd>
 			<dd>"<code>public(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>protected(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>private(</code>" predicate_indicator_list "<code>)</code>" |</dd>
 			<dd>"<code>parameter_names(</code>" <em>list of atoms</em> "<code>)</code>"</dd>
 	</dl>
 	<dl id="grammar_protocol_property">
@@ -927,7 +931,9 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>built_in</code>" |</dd>
 			<dd>"<code>file(</code>" <em>atom</em> "<code>,</code>" <em>atom</em> "<code>)</code>" |</dd>
 			<dd>"<code>lines(</code>" <em>integer</em> "<code>,</code>" <em>integer</em> "<code>)</code>" |</dd>
-			<dd>"<code>public(</code>" predicate_indicator_list "<code>)</code>"</dd>
+			<dd>"<code>public(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>protected(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>private(</code>" predicate_indicator_list "<code>)</code>"</dd>
 	</dl>
 
 
@@ -952,7 +958,7 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: May 7, 2011</span>
+		<span>Last updated on: May 11, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="index.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="index.html">next</a></span><br/>
