@@ -27,6 +27,11 @@ RELEASE NOTES
     redundant calls to (=)/2 from the body of clauses generated by the
     expansion of grammar rules).
 
+    Implemented protected/1 and private/1 properties for objects, protocols,
+    and categories. Together with the public/1 property, these properties
+    allows the list of predicates declared in the entity to be accessed for
+    reflective computations.
+
     Implemented compiler support for the meta_non_terminal/1 directive and the
     call//N built-in non-terminal.
 
